static/styles/base.css
/* ... */
.site-tabs a.current {
    font-weight: 600;
    color: var( --gray-0 );
    background: var( --primary );
}

.site-tabs .empty {
    flex: 1;
}

.infolist {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.infolist li {
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    align-items: center;
    gap: 40px;
    padding: 14px 0;
}

.infolist li .label {
    font-weight: 300;
}

.infolist li > div {
    display: flex;
    flex-flow: row wrap;
    justify-content: flex-end;
    align-items: center;
    gap: 5px 10px;
    text-align: right;
    white-space: nowrap;
}

.infolist li:not(:last-of-type) {
    border-bottom: 1px solid var( --shade-1 );
}

.heading {
    flex: 0 0 120px;
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
    gap: 6px;
}

.heading.no-hdg {
    visibility: hidden;
}

.heading .bug {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 30px;
    height: 30px;
    transform-origin: center;
}

.bug .icon {
    font-size: 24px;
    font-variation-settings: 'FILL' 1, 'wght' 500, 'GRAD' 200;
}

.heading .deg {
    font-size: 16px;
}

.nearby {
    align-self: center;
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    gap: 20px;
}

.nearby > div {
    flex: 1;
}

.nearby .meta {
    display: flex;
    flex-flow: column nowrap;
    gap: 6px;
}

.nearby .meta .label {
    line-height: 30px;
    font-size: 20px;
    font-weight: 600;
}

.nearby .meta .dist {
    font-size: 16px;
}

.pagination {
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    align-items: center;
    margin: 30px 0;
    font-size: 16px;
}

.pagination .pagelinks {
    display: flex;
    flex-flow: row nowrap;
    align-items: baseline;
    gap: 6px;
}

.pagination .pagelinks > * {
    padding: 4px 12px;
    font-weight: 800;
    border-radius: 4px;
}

.pagination .pagelinks .dots {
    color: var( --gray-3 );
}

.pagination .pagelinks .curr {
    color: var( --gray-0 );
    background: var( --primary );
}

.pagination .pagelinks .link:hover {
    text-decoration: none;
    color: var( --gray-0 );
    background: var( --primary-light );
}

.pagination .results {
    white-space: nowrap;
    text-transform: uppercase;
    font-weight: 300;
}

.pagination .results b {
    font-weight: 800;
}

.backto {
    margin: 40px 0;
}

.backto a {
    display: inline-flex;
    flex-flow: row nowrap;
    align-items: center;
    gap: 12px;
}

.backto a .icon {
    font-size: 20px;
}

.backto a:hover {
    text-decoration: none;
}

.backto a:hover span {
    text-decoration: underline;
}

.breadcrumbs {
    display: flex;
    flex-flow: row wrap;
    align-items: center;
    gap: 6px 12px;
    margin: 40px var( --padding-normal );
}

.airportlist .empty,
.stationlist .empty {
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
    gap: 20px;
    text-align: center;
}

.airportlist .empty .icon,
.stationlist .empty .icon {
    font-size: 60px;
    color: var( --primary-light );
}

.airportlist .empty .label,
.stationlist .empty .label {
    font-size: 26px;
    font-weight: 800;
    color: var( --gray-3 );
    opacity: 0.3;
}

.airportlist .list .row,
.stationlist .list .row {
    display: flex;
    flex-flow: row nowrap;
    align-items: flex-start;
    gap: 30px;
    padding: 30px 20px;
}

.airportlist .list .row mapicon {
    flex: 0 0 32px;
    width:  32px;
    height: 32px;
}

.airportlist .list .row .info,
.stationlist .list .row .info {
    flex: 1;
    display: flex;
    flex-flow: column nowrap;
    gap: 8px;
}

.airportlist .list .row .info .headline,
.stationlist .list .row .info .headline {
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    gap: 12px;
    height: 32px;
}

.airportlist .list .row .info .headline {
    margin-bottom: 10px;
}

.stationlist .list .row .info .headline {
    margin-bottom: 5px;
}

.airportlist .list .row .info .headline .code,
.airportlist .list .row .info .tags > *,
.stationlist .list .row .info .headline .code {
    padding: 4px 8px;
    text-transform: uppercase;
    font-size: 14px;
    font-weight: 300;
    background: var( --shade-1 );
    border-radius: 3px;
}

.airportlist .list .row .info .headline .code,
.stationlist .list .row .info .headline .code {
    white-space: nowrap;
    font-weight: 800;
    color: var( --gray-0 );
    background: var( --gray-3 );
}

.airportlist .list .row.airport-large .info .headline .code {
    background: var( --indicator-pink );
}

.airportlist .list .row.airport-medium .info .headline .code {
    background: var( --indicator-green );
}

.airportlist .list .row.airport-small .info .headline .code,
.airportlist .list .row.airport-seaplane .info .headline .code {
    background: var( --indicator-blue );
}

.airportlist .list .row.airport-heliport .info .headline .code,
.airportlist .list .row.airport-altiport .info .headline .code {
    background: var( --indicator-orange );
}

.airportlist .list .row.airport-closed .info .headline .code {
    background: var( --indicator-red );
}

.airportlist .list .row .info .headline .name,
.stationlist .list .row .info .headline .name {
    font-size: 20px;
    font-weight: 800;
}

.airportlist .list .row .info .location,
.airportlist .list .row .info .region,
.airportlist .list .row .info .tags {
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    gap: 4px 10px;
    margin: 0;
}

.airportlist .list .row .info .location,
.airportlist .list .row .info .region {
    font-size: 16px;
    color: var( --gray-4 );
}

.airportlist .list .row .info .location {
    gap: 12px;
}

.airportlist .list .row .info .tags {
    margin-top: 10px;
}

.airportlist .list .row .info .tags a:hover {
    text-decoration: none;
}

.airportlist .list .row .info .tags span {
    padding: 2px 6px;
    background: transparent;
    border: 2px solid var( --indicator-orange );
}
/* ... */

